# xrp_usdt

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: check.yml  docker_check.yml
tests/: test_xrp_usdt.py
xrp-usdt/: main.py
