[tool.poetry]
name = "xrp-usdt"
version = "0.1.0"
description = ""
authors = ["ajib6ept <asalbert@narod.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^23.1.0"
coverage = "^7.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
